--- a/css/theme-default.less
+++ b/css/theme-default.less
@@ -212,6 +212,18 @@
 	}
 }
 
+#dk-speakup-required-explanation {
+	text-align     : right;
+	color          : lighten( @headercolor, 10% );
+	font-size      : .8em;
+	position       : relative;
+	text-shadow    : @textshadowlight;
+}
+
+#dk-speakup-required-explanation span {
+	color : darken( @errorcolor, 50% );
+}
+
 /*
  *	Submit button
  */
