--- a/css/theme-basic.less
+++ b/css/theme-basic.less
@@ -96,6 +96,18 @@
 	vertical-align : bottom;
 }
 
+#dk-speakup-required-explanation {
+	text-align     : right;
+	color          : lighten( @headercolor, 10% );
+	font-size      : .8em;
+	position       : relative;
+	text-shadow    : @textshadowlight;
+}
+
+#dk-speakup-required-explanation span {
+	color : darken( @errorcolor, 50% );
+}
+
 /*
  *	Submit button
  */
